Encodage UTF-8 pour correction accent

--- a/documentation/latex/carte_8c.tex
+++ b/documentation/latex/carte_8c.tex
@@ -45,7 +45,7 @@ void \hyperlink{carte_8c_a0fd0758f5277dfa38fcb8046aa02b2bc}{Mur\+Afficher} (int 
 void \hyperlink{carte_8c_a675d31944fb0a3102c81c7d9bba6fb77}{Carte\+Afficher} (\hyperlink{structt__carte}{t\+\_\+carte} $\ast$carte)
 \begin{DoxyCompactList}\small\item\em Permet d\textquotesingle{}afficher la carte complÃ¨te, comme vue sur la console. \end{DoxyCompactList}\item 
 \hyperlink{structt__carte}{t\+\_\+carte} \hyperlink{carte_8c_a73e584f4cd750d1cefb539b2411de270}{Carte\+Creer} ()
-\begin{DoxyCompactList}\small\item\em Permet de créer une carte à partir d\textquotesingle{}un fichier contenant des paterns. \end{DoxyCompactList}\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em Permet de creer une carte a partir d\textquotesingle{}un fichier contenant des paterns. \end{DoxyCompactList}\end{DoxyCompactItemize}
 
 
 \subsection{Description dÃ©taillÃ©e}
@@ -74,13 +74,13 @@ Tony Marteau, Dimitri Bernot, Marvin Jean
 
 Permet d\textquotesingle{}afficher la carte complÃ¨te, comme vue sur la console. 
 
-Permet d\textquotesingle{}afficher la carte complète, comme vue sur la console.
+Permet d\textquotesingle{}afficher la carte complete, comme vue sur la console.
 
 
 \begin{DoxyParams}{ParamÃ¨tres}
 {\em $\ast$carte} & L\textquotesingle{}adresse de la carte Ã  afficher\\
 \hline
-{\em $\ast$carte} & L\textquotesingle{}adresse de la carte à afficher \\
+{\em $\ast$carte} & L\textquotesingle{}adresse de la carte a afficher \\
 \hline
 \end{DoxyParams}
 \hypertarget{carte_8c_a73e584f4cd750d1cefb539b2411de270}{}\index{carte.\+c@{carte.\+c}!Carte\+Creer@{Carte\+Creer}}
@@ -92,10 +92,10 @@ Permet d\textquotesingle{}afficher la carte complète, comme vue sur la console.
 )}\label{carte_8c_a73e584f4cd750d1cefb539b2411de270}
 
 
-Permet de créer une carte à partir d\textquotesingle{}un fichier contenant des paterns. 
+Permet de creer une carte a partir d\textquotesingle{}un fichier contenant des paterns. 
 
 \begin{DoxyReturn}{Renvoie}
-La carte ainsi créée 
+La carte ainsi cree 
 \end{DoxyReturn}
 \hypertarget{carte_8c_a8675becf0d30b7445e43f8c4357425bc}{}\index{carte.\+c@{carte.\+c}!Carte\+Initialiser@{Carte\+Initialiser}}
 \index{Carte\+Initialiser@{Carte\+Initialiser}!carte.\+c@{carte.\+c}}
@@ -108,7 +108,7 @@ La carte ainsi créée
 
 Initialise la carte donnÃ©e en paramÃ¨tre en remplissant sa grille de 0. 
 
-Initialise la carte donnée en paramètre en remplissant sa grille de 0.
+Initialise la carte donnee en parametre en remplissant sa grille de 0.
 
 
 \begin{DoxyParams}{ParamÃ¨tres}
@@ -126,7 +126,7 @@ Initialise la carte donnée en paramètre en remplissant sa grille de 0.
 
 Choisi l\textquotesingle{}emplacement de l\textquotesingle{}escalier et le place Ã  cet endroit de la carte, en s\textquotesingle{}assurant que ce soit bien dans une salle et non voisin d\textquotesingle{}un chemin. 
 
-Choisi l\textquotesingle{}emplacement de l\textquotesingle{}escalier et le place à cet endroit de la carte, en s\textquotesingle{}assurant que ce soit bien dans une salle et non voisin d\textquotesingle{}un chemin.
+Choisi l\textquotesingle{}emplacement de l\textquotesingle{}escalier et le place e cet endroit de la carte, en s\textquotesingle{}assurant que ce soit bien dans une salle et non voisin d\textquotesingle{}un chemin.
 
 
 \begin{DoxyParams}{ParamÃ¨tres}
@@ -148,7 +148,7 @@ Affiche la carte sous sa forme de matrice.
 \begin{DoxyParams}{ParamÃ¨tres}
 {\em matrice\mbox{[}\+T\+A\+I\+L\+L\+E\+\_\+\+C\+A\+R\+T\+E\+\_\+\+X\mbox{]}\mbox{[}\+T\+A\+I\+L\+L\+E\+\_\+\+C\+A\+R\+T\+E\+\_\+\+Y\mbox{]}} & La matrice Ã  afficher\\
 \hline
-{\em matrice\mbox{[}\+T\+A\+I\+L\+L\+E\+\_\+\+C\+A\+R\+T\+E\+\_\+\+X\mbox{]}\mbox{[}\+T\+A\+I\+L\+L\+E\+\_\+\+C\+A\+R\+T\+E\+\_\+\+Y\mbox{]}} & La matrice à afficher \\
+{\em matrice\mbox{[}\+T\+A\+I\+L\+L\+E\+\_\+\+C\+A\+R\+T\+E\+\_\+\+X\mbox{]}\mbox{[}\+T\+A\+I\+L\+L\+E\+\_\+\+C\+A\+R\+T\+E\+\_\+\+Y\mbox{]}} & La matrice e afficher \\
 \hline
 \end{DoxyParams}
 \hypertarget{carte_8c_a0fd0758f5277dfa38fcb8046aa02b2bc}{}\index{carte.\+c@{carte.\+c}!Mur\+Afficher@{Mur\+Afficher}}
@@ -172,9 +172,9 @@ Permet d\textquotesingle{}afficher un mur en fonction des salles l\textquotesing
 \hline
 {\em carte} & La carte\\
 \hline
-{\em i} & La coordonnée en ordonnée de la case contenant le mur \\
+{\em i} & La coordonnee en ordonnee de la case contenant le mur \\
 \hline
-{\em j} & La coordonnée en abscisse de la case contenant le mur \\
+{\em j} & La coordonnee en abscisse de la case contenant le mur \\
 \hline
 {\em carte} & La carte \\
 \hline
@@ -192,7 +192,7 @@ Permet d\textquotesingle{}afficher un mur en fonction des salles l\textquotesing
 
 Place un obstacle dans une salle donnÃ©e. 
 
-Place un obstacle dans une salle donnée
+Place un obstacle dans une salle donnee.
 
 
 \begin{DoxyParams}{ParamÃ¨tres}
@@ -202,9 +202,9 @@ Place un obstacle dans une salle donnée
 \hline
 {\em $\ast$carte} & L\textquotesingle{}adresse de la carte\\
 \hline
-{\em nb\+\_\+salles\+\_\+x} & La coordonnée en ordonnée de la salle \\
+{\em nb\+\_\+salles\+\_\+x} & La coordonnee en ordonnee de la salle \\
 \hline
-{\em nb\+\_\+salles\+\_\+y} & La coordonnée en abscisse de la salle \\
+{\em nb\+\_\+salles\+\_\+y} & La coordonnee en abscisse de la salle \\
 \hline
 {\em $\ast$carte} & L\textquotesingle{}adresse de la carte \\
 \hline
@@ -252,7 +252,7 @@ Place toutes les portes possibles et logiques.
 
 Retire certaines portes choisies de maniÃ¨re alÃ©atoire. 
 
-Retire certaines portes choisies de manière aléatoire.
+Retire certaines portes choisies de maniere aleatoire.
 
 
 \begin{DoxyParams}{ParamÃ¨tres}
@@ -270,7 +270,7 @@ Retire certaines portes choisies de manière aléatoire.
 
 Retoure le nombre de salles diffÃ©rentes comptÃ©es dans le fichier donnÃ© en paramÃ¨tre. 
 
-Retoure le nombre de salles différentes comptées dans le fichier donné en paramètre.
+Retoure le nombre de salles differentes comptees dans le fichier donne en paramètre.
 
 
 \begin{DoxyParams}{ParamÃ¨tres}
@@ -282,9 +282,9 @@ Le nombre de paterns diffÃ©rents
 \end{DoxyReturn}
 
 \begin{DoxyParams}{ParamÃ¨tres}
-{\em $\ast$carte\+Fichier} & Le fichier contenant les différents paterns de salles \\
+{\em $\ast$carte\+Fichier} & Le fichier contenant les differents paterns de salles \\
 \hline
 \end{DoxyParams}
 \begin{DoxyReturn}{Renvoie}
-Le nombre de paterns différents 
+Le nombre de paterns differents 
 \end{DoxyReturn}
