--- a/documentation/latex/check_8c.tex
+++ b/documentation/latex/check_8c.tex
@@ -216,7 +216,7 @@ Vrai ou faux
 \item[{{\bf t\+\_\+carte}}]{carte}
 \end{DoxyParamCaption}
 )}\label{check_8c_ae0787772e3d0416341f9d983c403074c}
-Retourne 1 si il y a une salle au coordonné saisie \hypertarget{check_8c_a2f980f139cecb7012210126ccb354dbf}{}\index{check.\+c@{check.\+c}!Check\+Salle\+Joueur@{Check\+Salle\+Joueur}}
+Retourne 1 si il y a une salle au coordonnÃ© saisie \hypertarget{check_8c_a2f980f139cecb7012210126ccb354dbf}{}\index{check.\+c@{check.\+c}!Check\+Salle\+Joueur@{Check\+Salle\+Joueur}}
 \index{Check\+Salle\+Joueur@{Check\+Salle\+Joueur}!check.\+c@{check.\+c}}
 \subsubsection[{Check\+Salle\+Joueur(int x, int y, t\+\_\+carte carte)}]{\setlength{\rightskip}{0pt plus 5cm}int Check\+Salle\+Joueur (
 \begin{DoxyParamCaption}
