--- a/documentation/latex/deplacement_8h.tex
+++ b/documentation/latex/deplacement_8h.tex
@@ -28,7 +28,7 @@ Tony Marteau, Dimitri Bernot, Marvin Jean
 1.\+0.\+0 
 \end{DoxyVersion}
 \begin{DoxyDate}{Date}
-18 décembre 2015 
+18 decembre 2015 
 \end{DoxyDate}
 
 
@@ -45,7 +45,7 @@ Tony Marteau, Dimitri Bernot, Marvin Jean
 
 Deplace le personnage et retourne l\textquotesingle{}id du monstre si il y a un combat a effectuer. 
 
-Deplace le personnage et retourne l\textquotesingle{}id du monstre si il y a un combat a effectué
+Deplace le personnage et retourne l\textquotesingle{}id du monstre si il y a un combat a effectue
 
 
 \begin{DoxyParams}{ParamÃ¨tres}
