--- a/documentation/latex/general_8h.tex
+++ b/documentation/latex/general_8h.tex
@@ -2,7 +2,7 @@
 \label{general_8h}\index{inc/general.\+h@{inc/general.\+h}}
 
 
-BibliothËque inclus.  
+Biblioth√®que inclus.  
 
 
 {\ttfamily \#include $<$time.\+h$>$}\\*
@@ -20,7 +20,7 @@ BibliothËque inclus.
 
 
 \subsection{Description d√©taill√©e}
-BibliothËque inclus. 
+Biblioth√®que inclus. 
 
 \begin{DoxyAuthor}{Auteur}
 Tony Marteau, Dimitri Bernot, Marvin Jean 
@@ -29,5 +29,5 @@ Tony Marteau, Dimitri Bernot, Marvin Jean
 1.\+0.\+0 
 \end{DoxyVersion}
 \begin{DoxyDate}{Date}
-18 dÈcembre 2015 
+18 d√©cembre 2015 
 \end{DoxyDate}
