--- a/documentation/latex/Structure_8h.tex
+++ b/documentation/latex/Structure_8h.tex
@@ -80,5 +80,5 @@ Tony Marteau, Dimitri Bernot, Marvin Jean
 1.\+0.\+0 
 \end{DoxyVersion}
 \begin{DoxyDate}{Date}
-18 décembre 2015 
+18 dÃ©cembre 2015 
 \end{DoxyDate}
