--- a/documentation/latex/carte_8h.tex
+++ b/documentation/latex/carte_8h.tex
@@ -44,7 +44,7 @@ void \hyperlink{carte_8h_a0fd0758f5277dfa38fcb8046aa02b2bc}{Mur\+Afficher} (int 
 void \hyperlink{carte_8h_a675d31944fb0a3102c81c7d9bba6fb77}{Carte\+Afficher} (\hyperlink{structt__carte}{t\+\_\+carte} $\ast$carte)
 \begin{DoxyCompactList}\small\item\em Permet d\textquotesingle{}afficher la carte complÃ¨te, comme vue sur la console. \end{DoxyCompactList}\item 
 \hyperlink{structt__carte}{t\+\_\+carte} \hyperlink{carte_8h_af6d58b505a3ca32898f7cd7d63ad44d9}{Carte\+Creer} ()
-\begin{DoxyCompactList}\small\item\em Permet de créer une carte à partir d\textquotesingle{}un fichier contenant des paterns. \end{DoxyCompactList}\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em Permet de creer une carte a partir d\textquotesingle{}un fichier contenant des paterns. \end{DoxyCompactList}\end{DoxyCompactItemize}
 
 
 \subsection{Description dÃ©taillÃ©e}
@@ -57,7 +57,7 @@ Tony Marteau, Dimitri Bernot, Marvin Jean
 1.\+0.\+0 
 \end{DoxyVersion}
 \begin{DoxyDate}{Date}
-18 décembre 2015 
+18 decembre 2015 
 \end{DoxyDate}
 
 
@@ -73,13 +73,13 @@ Tony Marteau, Dimitri Bernot, Marvin Jean
 
 Permet d\textquotesingle{}afficher la carte complÃ¨te, comme vue sur la console. 
 
-Permet d\textquotesingle{}afficher la carte complète, comme vue sur la console.
+Permet d\textquotesingle{}afficher la carte complete, comme vue sur la console.
 
 
 \begin{DoxyParams}{ParamÃ¨tres}
 {\em $\ast$carte} & L\textquotesingle{}adresse de la carte Ã  afficher\\
 \hline
-{\em $\ast$carte} & L\textquotesingle{}adresse de la carte à afficher \\
+{\em $\ast$carte} & L\textquotesingle{}adresse de la carte a afficher \\
 \hline
 \end{DoxyParams}
 \hypertarget{carte_8h_af6d58b505a3ca32898f7cd7d63ad44d9}{}\index{carte.\+h@{carte.\+h}!Carte\+Creer@{Carte\+Creer}}
@@ -91,10 +91,10 @@ Permet d\textquotesingle{}afficher la carte complète, comme vue sur la console.
 )}\label{carte_8h_af6d58b505a3ca32898f7cd7d63ad44d9}
 
 
-Permet de créer une carte à partir d\textquotesingle{}un fichier contenant des paterns. 
+Permet de creer une carte a partir d\textquotesingle{}un fichier contenant des paterns. 
 
 \begin{DoxyReturn}{Renvoie}
-La carte ainsi créée 
+La carte ainsi cree 
 \end{DoxyReturn}
 \hypertarget{carte_8h_a1569148bfc521aa409cc260c84b89cb1}{}\index{carte.\+h@{carte.\+h}!Carte\+Initialiser@{Carte\+Initialiser}}
 \index{Carte\+Initialiser@{Carte\+Initialiser}!carte.\+h@{carte.\+h}}
@@ -107,7 +107,7 @@ La carte ainsi créée
 
 Initialise la carte donnÃ©e en paramÃ¨tre en remplissant sa grille de 0. 
 
-Initialise la carte donnée en paramètre en remplissant sa grille de 0.
+Initialise la carte donnee en parametre en remplissant sa grille de 0.
 
 
 \begin{DoxyParams}{ParamÃ¨tres}
@@ -125,7 +125,7 @@ Initialise la carte donnée en paramètre en remplissant sa grille de 0.
 
 Choisi l\textquotesingle{}emplacement de l\textquotesingle{}escalier et le place Ã  cet endroit de la carte, en s\textquotesingle{}assurant que ce soit bien dans une salle et non voisin d\textquotesingle{}un chemin. 
 
-Choisi l\textquotesingle{}emplacement de l\textquotesingle{}escalier et le place à cet endroit de la carte, en s\textquotesingle{}assurant que ce soit bien dans une salle et non voisin d\textquotesingle{}un chemin.
+Choisi l\textquotesingle{}emplacement de l\textquotesingle{}escalier et le place e cet endroit de la carte, en s\textquotesingle{}assurant que ce soit bien dans une salle et non voisin d\textquotesingle{}un chemin.
 
 
 \begin{DoxyParams}{ParamÃ¨tres}
@@ -147,7 +147,7 @@ Affiche la carte sous sa forme de matrice.
 \begin{DoxyParams}{ParamÃ¨tres}
 {\em matrice\mbox{[}\+T\+A\+I\+L\+L\+E\+\_\+\+C\+A\+R\+T\+E\+\_\+\+X\mbox{]}\mbox{[}\+T\+A\+I\+L\+L\+E\+\_\+\+C\+A\+R\+T\+E\+\_\+\+Y\mbox{]}} & La matrice Ã  afficher\\
 \hline
-{\em matrice\mbox{[}\+T\+A\+I\+L\+L\+E\+\_\+\+C\+A\+R\+T\+E\+\_\+\+X\mbox{]}\mbox{[}\+T\+A\+I\+L\+L\+E\+\_\+\+C\+A\+R\+T\+E\+\_\+\+Y\mbox{]}} & La matrice à afficher \\
+{\em matrice\mbox{[}\+T\+A\+I\+L\+L\+E\+\_\+\+C\+A\+R\+T\+E\+\_\+\+X\mbox{]}\mbox{[}\+T\+A\+I\+L\+L\+E\+\_\+\+C\+A\+R\+T\+E\+\_\+\+Y\mbox{]}} & La matrice e afficher \\
 \hline
 \end{DoxyParams}
 \hypertarget{carte_8h_a0fd0758f5277dfa38fcb8046aa02b2bc}{}\index{carte.\+h@{carte.\+h}!Mur\+Afficher@{Mur\+Afficher}}
@@ -171,9 +171,9 @@ Permet d\textquotesingle{}afficher un mur en fonction des salles l\textquotesing
 \hline
 {\em carte} & La carte\\
 \hline
-{\em i} & La coordonnée en ordonnée de la case contenant le mur \\
+{\em i} & La coordonnee en ordonnee de la case contenant le mur \\
 \hline
-{\em j} & La coordonnée en abscisse de la case contenant le mur \\
+{\em j} & La coordonnee en abscisse de la case contenant le mur \\
 \hline
 {\em carte} & La carte \\
 \hline
@@ -191,7 +191,7 @@ Permet d\textquotesingle{}afficher un mur en fonction des salles l\textquotesing
 
 Place un obstacle dans une salle donnÃ©e. 
 
-Place un obstacle dans une salle donnée
+Place un obstacle dans une salle donnee.
 
 
 \begin{DoxyParams}{ParamÃ¨tres}
@@ -201,9 +201,9 @@ Place un obstacle dans une salle donnée
 \hline
 {\em $\ast$carte} & L\textquotesingle{}adresse de la carte\\
 \hline
-{\em nb\+\_\+salles\+\_\+x} & La coordonnée en ordonnée de la salle \\
+{\em nb\+\_\+salles\+\_\+x} & La coordonnee en ordonnee de la salle \\
 \hline
-{\em nb\+\_\+salles\+\_\+y} & La coordonnée en abscisse de la salle \\
+{\em nb\+\_\+salles\+\_\+y} & La coordonnee en abscisse de la salle \\
 \hline
 {\em $\ast$carte} & L\textquotesingle{}adresse de la carte \\
 \hline
@@ -251,7 +251,7 @@ Place toutes les portes possibles et logiques.
 
 Retire certaines portes choisies de maniÃ¨re alÃ©atoire. 
 
-Retire certaines portes choisies de manière aléatoire.
+Retire certaines portes choisies de maniere aleatoire.
 
 
 \begin{DoxyParams}{ParamÃ¨tres}
@@ -269,7 +269,7 @@ Retire certaines portes choisies de manière aléatoire.
 
 Retoure le nombre de salles diffÃ©rentes comptÃ©es dans le fichier donnÃ© en paramÃ¨tre. 
 
-Retoure le nombre de salles différentes comptées dans le fichier donné en paramètre.
+Retoure le nombre de salles differentes comptees dans le fichier donne en paramètre.
 
 
 \begin{DoxyParams}{ParamÃ¨tres}
@@ -281,9 +281,9 @@ Le nombre de paterns diffÃ©rents
 \end{DoxyReturn}
 
 \begin{DoxyParams}{ParamÃ¨tres}
-{\em $\ast$carte\+Fichier} & Le fichier contenant les différents paterns de salles \\
+{\em $\ast$carte\+Fichier} & Le fichier contenant les differents paterns de salles \\
 \hline
 \end{DoxyParams}
 \begin{DoxyReturn}{Renvoie}
-Le nombre de paterns différents 
+Le nombre de paterns differents 
 \end{DoxyReturn}
