--- a/documentation/latex/combat_8h.tex
+++ b/documentation/latex/combat_8h.tex
@@ -24,7 +24,7 @@ Tony Marteau, Dimitri Bernot, Marvin Jean
 1.\+0.\+0 
 \end{DoxyVersion}
 \begin{DoxyDate}{Date}
-18 décembre 2015 
+18 dÃ©cembre 2015 
 \end{DoxyDate}
 
 
