--- a/documentation/latex/dir_bfccd401955b95cf8c75461437045ac0.tex
+++ b/documentation/latex/dir_bfccd401955b95cf8c75461437045ac0.tex
@@ -14,7 +14,7 @@ fichier \hyperlink{couleur_8h}{couleur.\+h}
 fichier \hyperlink{deplacement_8h}{deplacement.\+h}
 \begin{DoxyCompactList}\small\item\em Prototype donction deplacementpersonnage. \end{DoxyCompactList}\item 
 fichier \hyperlink{general_8h}{general.\+h}
-\begin{DoxyCompactList}\small\item\em Bibliothèque inclus. \end{DoxyCompactList}\item 
+\begin{DoxyCompactList}\small\item\em BibliothÃ¨que inclus. \end{DoxyCompactList}\item 
 fichier \hyperlink{jeu_8h}{jeu.\+h}
 \begin{DoxyCompactList}\small\item\em prototype fonction jeu \end{DoxyCompactList}\item 
 fichier \hyperlink{monstre_8h}{monstre.\+h}
